# ur_rikuken

./: README.md
arm_and_gripper/: README.md
arm_and_gripper/arm_and_gripper/: package.xml
arm_and_gripper/rviz/: moveit.rviz
gazebo_camera/: CMakeLists.txt  package.xml
gazebo_camera/launch/: camera.launch
gazebo_camera/urdf/: camera.urdf.xacro
initial_moveit/: CMakeLists.txt  package.xml
initial_moveit/launch/: moveit.launch
initial_moveit/src/: bit_move.cpp  trajectory_move.cpp
kei_ur/: CMakeLists.txt  package.xml
kei_ur/include/: camera.hpp  my_ur.hpp
kei_ur/launch/: camera.launch  listener.launch  moveit.launch  setup.launch  tf.launch
kei_ur/rviz/: tf.rviz
kei_ur/src/: bit_move.cpp  camera.cpp  camera_once.cpp  move_direction.cpp  my_ur.cpp  tf_listen.cpp  tf_publish.cpp  trajectory_move.cpp
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/dae/: bin.dae  table.dae
pick_and_place/file/: rectungle.dae
pick_and_place/include/: camera_node.hpp  manipulator_node.hpp
pick_and_place/launch/: camera.launch  (+4 more)
pick_and_place_2022/: CMakeLists.txt  package.xml
prepare_pack/: CMakeLists.txt  package.xml
realsense_clear/: CMakeLists.txt  package.xml
simulate_camera/: CMakeLists.txt  package.xml
ur3_moveit_tsuchida_new/: .setup_assistant
ur3_realsense85_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur3_realsense_85_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur3_realsense_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur3_realsense_moveit_ver2/: .setup_assistant  CMakeLists.txt  package.xml
(+242 files in other folders)
